prsm.yaml

apiVersion: v1
kind: Service
metadata:
  name: test-static-service
spec:
  type: ExternalName
  externalName: nyc3.digitaloceanspaces.com

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prsm-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/rewrite-target: /bhdev/prsm/v0.0.1/index.html
    nginx.ingress.kubernetes.io/upstream-vhost: nyc3.digitaloceanspaces.com

spec:
  tls:
  - hosts:
    - stage0.bh.dev
    secretName: test-tls-cert
  rules:
  - host: stage0.bh.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-static-service
            port:
              number: 443

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prsm-ingress-static
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/rewrite-target: /bhdev/prsm/v0.0.1/static/$2
    nginx.ingress.kubernetes.io/upstream-vhost: nyc3.digitaloceanspaces.com

spec:
  tls:
  - hosts:
    - stage0.bh.dev
    secretName: test-tls-cert
  rules:
  - host: stage0.bh.dev
    http:
      paths:
      - path: /static(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: test-static-service
            port:
              number: 443
