static-test.yaml

apiVersion: v1
kind: Service
metadata:
  name: test-static-service
spec:
  type: ExternalName
  externalName: nyc3.digitaloceanspaces.com

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-static-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/rewrite-target: /bhdev/$2
    nginx.ingress.kubernetes.io/upstream-vhost: nyc3.digitaloceanspaces.com
spec:
  rules:
  - http: 
      paths:
      - path: /static(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: test-static-service
            port:
              number: 443

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ui-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/rewrite-target: /bhdev/test-ui/v0.1.0/index.html
    nginx.ingress.kubernetes.io/upstream-vhost: nyc3.digitaloceanspaces.com

spec:
  rules:
  - http:
      paths:
      - path: /test-ui
        pathType: Prefix
        backend:
          service:
            name: test-static-service
            port:
              number: 443

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ui-ingress-static
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/rewrite-target: /bhdev/test-ui/v0.1.0/static/$2
    nginx.ingress.kubernetes.io/upstream-vhost: nyc3.digitaloceanspaces.com

spec:
  rules:
  - http:
      paths:
      - path: /test-ui/static(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: test-static-service
            port:
              number: 443
